--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,10 @@ BACKEND_TEST_TAG_PATTERN=
 BACKEND_PROD_YUNXIAO_URL=
 BACKEND_PROD_K8S_URL=
 BACKEND_PROD_TAG_PATTERN=
+
+
+# k8账号密码
+K8S_DEV_USERNAME=
+K8S_DEV_PASSWORD=
+K8S_PROD_USERNAME=
+K8S_PROD_PASSWORD=
