feat： 后端多环境tag获取调整。布局调整。

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
+# ==================== 镜像仓库配置 ====================
+# 镜像仓库地址和路径前缀
+IMAGE_REGISTRY=registry.wuxi.epartical.com:10443
+IMAGE_NAMESPACE=javaly
+
+# ==================== 云效界面配置 ====================
+# 日志展开时需要点击的文本(云效界面上的任务名称)
+YUNXIAO_LOG_EXPAND_TEXT=镜像构建并推送
+
 # ==================== 前端配置 ====================
 # 前端测试环境
 FRONTEND_TEST_YUNXIAO_URL=https://flow.aliyun.com/pipelines/YOUR_PIPELINE_ID/current
